About: A p5.js tropical cyclone simulation game

v20190615a:
    * Cleaned up some of the repetative UI code, particularly in the case of buttons
v20190613a:
    + Added partial support for indexedDB saving/loading
        > Currently only used to store settings, while localStorage is still used for basins and seasons
        > Full transition coming in a later update
    + Added new waiting screen (with animated loading ring) for asynchronous tasks
        > Not used for rendering as that is single-threaded
    * Various code optimizations for the upcoming switch to storing basins and seasons in indexedDB
    % Added Dexie.js for an easier indexedDB API
v20190606a:
    + Added NIO, SWIO, SPac, SAtl, Jakarta, and Port Moresby name lists
        > Jakarta and Port Moresby lists are not included in Aus, but completely separate lists for now
    + Added "No Tracks" track mode
    * Updated WPac list preset to reflect the retirement and replacement of 2017 storm names
        > Only affects newly created basins
    * Fixed a couple track updating bugs:
        > New track segments getting drawn for non-selected storms while a storm is selected
        > Tracks not getting refreshed when the track mode setting button is clicked
v20190531b:
    * Season summary timelines now use Greek letters for storms with Greek letter names
v20190531a:
    + Added season summary timelines
        > Accessible by clicking "Show Timeline" in the info panel
v20190526a:
    + Added spawning of subtropical depressions and storms in god mode
        > Shift+D and click for subtropical depressions
        > Shift+S and click for subtropical storms
        > Pardon me mobile users; I'll add an alternative spawning method eventually
v20190525a:
    * Changed how natural storm system spawning works
        > Systems (both extratropical and tropical waves) can now spawn at any longitude
        > Extratropical systems spawn along the jetstream